--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2 class="essentioal_plan"> Essencial</h2>
             <p> <span class="preco_plan">R$ 3.95</span> /mês</p>
             <uL class="caracteristicas">
-                <li> 1 Website</li>
+                <li> 1 Websites</li>
                 <li> 1GB de Armazenamento</li>
                 <li> 10GB de transferência</li>
             </uL>
@@ -42,7 +42,7 @@
             <h2 class="Premium_plan"> Premium</h2>
             <p> <span class="preco_plan">R$ 7.95</span> /mês</p>
             <uL class="caracteristicas">
-                <li> 5 Website</li>
+                <li> 5 Websites</li>
                 <li> 3GB de Armazenamento</li>
                 <li> Transferência ilimitada</li>
                 <li> 10 horas de suporte mensais</li>
@@ -61,7 +61,7 @@
             <h2 class="Master_plan"> Master</h2>
             <p> <span class="preco_plan">R$ 13.95</span> /mês</p>
             <uL class="caracteristicas">
-                <li> 10 Website</li>
+                <li> 10 Websites</li>
                 <li> 300GB de Armazenamento</li>
                 <li> Transferência ilimitada</li>
                 <li> 30 Horas de suporte mensais</li>
